Refactor SizeGraph to use PySide6 and enhance treemap visualization
- Replaced tkinter with PySide6 for GUI components, improving cross-platform compatibility and modernizing the UI.
- Updated the `FileInfo` class and `traverse_directory` function to handle directory scanning with enhanced error handling and progress reporting.
- Introduced a new `TreemapView` class for rendering the treemap, with improved layout and color handling for files and directories.
- Added functionality to display file size information on click and improved the overall responsiveness of the GUI.
- Enhanced percentage calculations to avoid division by zero and ensure accurate size representation in the treemap.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 # Core dependencies
-tkinter  # Usually comes with Python, no need to install separately
+PySide6>=6.6.0  # Qt for Python
 pathlib  # Part of Python standard library since 3.4
 typing   # Part of Python standard library since 3.5
 dataclasses  # Part of Python standard library since 3.7
