--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ PySide6>=6.6.0  # Qt for Python
 pathlib  # Part of Python standard library since 3.4
 typing   # Part of Python standard library since 3.5
 dataclasses  # Part of Python standard library since 3.7
+psutil>=5.9.0  # System and process utilities
 
 # Development dependencies (optional)
 black>=23.0.0  # Code formatting
